# mailslurp-client-rust

./: Cargo.toml  README.md
docs/: AbstractWebhookPayload.md  AliasControllerApi.md  AliasDto.md  AliasProjection.md  AttachmentControllerApi.md  AttachmentEntity.md  AttachmentMetaData.md  AttachmentProjection.md  BasicAuthOptions.md  BounceControllerApi.md  BounceProjection.md  BounceRecipient.md  BouncedEmailDto.md  BouncedRecipientDto.md  BulkActionsControllerApi.md  BulkSendEmailOptions.md  CommonActionsControllerApi.md  ConditionOption.md  ContactControllerApi.md  ContactDto.md  ContactProjection.md  ContentMatchOptions.md  CreateAliasOptions.md  CreateContactOptions.md  CreateDomainOptions.md  CreateGroupOptions.md  CreateInboxDto.md  CreateInboxForwarderOptions.md  CreateInboxRulesetOptions.md  CreateTemplateOptions.md  CreateTrackingPixelOptions.md  CreateWebhookOptions.md  DescribeDomainOptions.md  DescribeMailServerDomainResult.md  DnsLookupOptions.md  DnsLookupResult.md  DnsLookupResults.md  DomainControllerApi.md  DomainDto.md  DomainNameRecord.md  (+117 more)
src/: lib.rs
src/apis/: configuration.rs  email_controller_api.rs  mod.rs
