[package]
description = "Official MailSlurp Email API Client"
license = "MIT"

name = "mailslurp"
version = "14.0.1"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
reqwest-middleware = { version = "0.4.0", features = ["json", "multipart"] }
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
], default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.125", features = ["preserve_order", "raw_value"] }
url = "^2.2"

[workspace]
